docs(CLAUDE.md): актуализировать инструкции сборки в web-sandbox
Проверено в текущем sandbox:
- ./gradlew не работает: дистрибутив 9.6.1 редиректится на GitHub
  releases, заблокированный egress-политикой (403) → использовать
  предустановленный /opt/gradle/bin/gradle (8.14.3, совместим);
- Docker теперь доступен: после `sudo dockerd &` проходят все *IT
  (образ pgvector/pgvector:pg17 тянется через прокси);
- полный `build` (включая фронтенд и Jest) работает;
- bootRun работает с init-скриптом; /opt/pw-browsers/chromium —
  стабильный симлинк для Playwright.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Sk22RnyeQAwf1VWPdSj82N